fixed overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,6 @@
 
 
 * {
-    overflow: hidden; 
     box-sizing: border-box;
 }
 
@@ -30,14 +29,14 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 .background {
   background-image: url("https://cdn.mos.cms.futurecdn.net/38WNhVt7qradw6zKgzCvfE.jpg");
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-size: cover;
   filter: sepia(50%);
   position: absolute;
@@ -92,6 +91,9 @@ body {
   font-size: xx-large;
   margin-top: 0px;
   line-height: 30px;
+  margin-right: 0;
+  margin-left: 0;
+  width: 100vw;
 }
 
 .album-position {
@@ -134,4 +136,8 @@ body {
     audio{
         width: 100px;
     }
+}
+
+.nuisance{
+    overflow: hidden;
 }
